# ply-processor-circle

./: pyproject.toml
data/sample/: sample.ply  stl2ply.py
ply_processor_circle/: circle.py  config.py  geometry.py  plane.py
ply_processor_circle/utils/: config.py  log.py  singleton.py
