[tool.taskipy.tasks]
test = {cmd = "dotenv --file envs/.env.development run -- pytest", help = "Run unit test."}
dev-python = {cmd = "dotenv --file envs/.env.development run -- python", help = "Run python with dev environment."}

[tool.poetry]
name = "ply_processor_circle"
version = "0.1.0"
description = ""
authors = ["HiraiKyo <kyo.mikhael@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.19"
python-dotenv = "^1.0.1"
pydantic = "^2.7.4"
open3d = "^0.18.0"
scikit-learn = "1.3.2"
pyyaml = "^6.0.2"
addict = "^2.4.0"
pillow = "^10.4.0"
pandas = "2.0.3"
tqdm = "^4.66.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
pytest = "^8.2.2"
pytest-env = "^1.1.3"
taskipy = "^1.13.0"
mypy = "^1.11.1"

[tool.ruff]
target-version = "py38"
line-length = 120
remove-all-unused-imports = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[[tool.mypy.overrides]]
module = ["open3d", "pandas", "sklearn", "sklearn.cluster"]
ignore_missing_imports = true

[build-system]
requires = ["setuptools","poetry-core"]
build-backend = "poetry.core.masonry.api"
